--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "pg": "^8.12.0",
+    "querystring-es3": "^0.2.1",
     "sequelize": "^6.37.3"
   }
 }
