--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.19.2",
     "pg": "^8.12.0",
     "querystring-es3": "^0.2.1",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "sportsweb": "file:"
   }
 }
